{
  "version": 4,
  "terraform_version": "1.4.2",
  "serial": 26,
  "lineage": "47341100-6b29-77e4-d1f3-6b85b911d642",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default-allow-custom",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2023-04-19T04:21:32.782-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/qwiklabs-gcp-00-cf3e670a13c7/global/firewalls/mynetwork-allow-custom",
            "log_config": [],
            "name": "mynetwork-allow-custom",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-cf3e670a13c7/global/networks/mynetwork",
            "priority": 65534,
            "project": "qwiklabs-gcp-00-cf3e670a13c7",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-cf3e670a13c7/global/firewalls/mynetwork-allow-custom",
            "source_ranges": [
              "10.128.0.0/9"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc-network-default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default-allow-icmp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2023-04-19T04:21:32.753-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/qwiklabs-gcp-00-cf3e670a13c7/global/firewalls/mynetwork-allow-icmp",
            "log_config": [],
            "name": "mynetwork-allow-icmp",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-cf3e670a13c7/global/networks/mynetwork",
            "priority": 65534,
            "project": "qwiklabs-gcp-00-cf3e670a13c7",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-cf3e670a13c7/global/firewalls/mynetwork-allow-icmp",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc-network-default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default-allow-rdp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "3389"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-04-19T04:21:32.760-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/qwiklabs-gcp-00-cf3e670a13c7/global/firewalls/mynetwork-allow-rdp",
            "log_config": [],
            "name": "mynetwork-allow-rdp",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-cf3e670a13c7/global/networks/mynetwork",
            "priority": 65534,
            "project": "qwiklabs-gcp-00-cf3e670a13c7",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-cf3e670a13c7/global/firewalls/mynetwork-allow-rdp",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc-network-default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default-allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-04-19T04:21:32.768-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/qwiklabs-gcp-00-cf3e670a13c7/global/firewalls/mynetwork-allow-ssh",
            "log_config": [],
            "name": "mynetwork-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-cf3e670a13c7/global/networks/mynetwork",
            "priority": 65534,
            "project": "qwiklabs-gcp-00-cf3e670a13c7",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-cf3e670a13c7/global/firewalls/mynetwork-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc-network-default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "managementnet-allow-icmp-ssh-rdp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "3389"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2023-04-19T04:48:18.841-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/qwiklabs-gcp-00-cf3e670a13c7/global/firewalls/managementnet-allow-icmp-ssh-rdp",
            "log_config": [],
            "name": "managementnet-allow-icmp-ssh-rdp",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-cf3e670a13c7/global/networks/managementnet",
            "priority": 1000,
            "project": "qwiklabs-gcp-00-cf3e670a13c7",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-cf3e670a13c7/global/firewalls/managementnet-allow-icmp-ssh-rdp",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.managementnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "privatenet-allow-icmp-ssh-rdp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "3389"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2023-04-19T04:48:18.817-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/qwiklabs-gcp-00-cf3e670a13c7/global/firewalls/privatenet-allow-icmp-ssh-rdp",
            "log_config": [],
            "name": "privatenet-allow-icmp-ssh-rdp",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-cf3e670a13c7/global/networks/privatenet",
            "priority": 1000,
            "project": "qwiklabs-gcp-00-cf3e670a13c7",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-cf3e670a13c7/global/firewalls/privatenet-allow-icmp-ssh-rdp",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.privatenet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "managementnet-us-vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20230411",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-cf3e670a13c7/zones/us-west3-b/disks/managementnet-us-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/qwiklabs-gcp-00-cf3e670a13c7/zones/us-west3-b/instances/managementnet-us-vm",
            "instance_id": "440033872350177498",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "ez8t0mfGQas=",
            "name": "managementnet-us-vm",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.106.204.142",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-cf3e670a13c7/global/networks/managementnet",
                "network_ip": "10.240.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-cf3e670a13c7/regions/us-west3/subnetworks/managementsubnet-us",
                "subnetwork_project": "qwiklabs-gcp-00-cf3e670a13c7"
              }
            ],
            "project": "qwiklabs-gcp-00-cf3e670a13c7",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-cf3e670a13c7/zones/us-west3-b/instances/managementnet-us-vm",
            "service_account": [
              {
                "email": "946216768401-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/logging.write",
                  "https://www.googleapis.com/auth/monitoring.write",
                  "https://www.googleapis.com/auth/service.management.readonly",
                  "https://www.googleapis.com/auth/servicecontrol",
                  "https://www.googleapis.com/auth/trace.append"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-west3-b"
          },
          "dependencies": [
            "data.google_compute_default_service_account.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "mynet-eu-vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20230411",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-cf3e670a13c7/zones/europe-west1-c/disks/mynet-eu-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/qwiklabs-gcp-00-cf3e670a13c7/zones/europe-west1-c/instances/mynet-eu-vm",
            "instance_id": "1249178068507062699",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "ez8t0mfGQas=",
            "name": "mynet-eu-vm",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.195.240.99",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-cf3e670a13c7/global/networks/mynetwork",
                "network_ip": "10.132.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-cf3e670a13c7/regions/europe-west1/subnetworks/mynetwork",
                "subnetwork_project": "qwiklabs-gcp-00-cf3e670a13c7"
              }
            ],
            "project": "qwiklabs-gcp-00-cf3e670a13c7",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-cf3e670a13c7/zones/europe-west1-c/instances/mynet-eu-vm",
            "service_account": [
              {
                "email": "946216768401-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/logging.write",
                  "https://www.googleapis.com/auth/monitoring.write",
                  "https://www.googleapis.com/auth/service.management.readonly",
                  "https://www.googleapis.com/auth/servicecontrol",
                  "https://www.googleapis.com/auth/trace.append"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "europe-west1-c"
          },
          "dependencies": [
            "data.google_compute_default_service_account.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "mynet-us-vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20230411",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-cf3e670a13c7/zones/us-west3-b/disks/mynet-us-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/qwiklabs-gcp-00-cf3e670a13c7/zones/us-west3-b/instances/mynet-us-vm",
            "instance_id": "7818551618295722410",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "ez8t0mfGQas=",
            "name": "mynet-us-vm",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.106.139.247",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-cf3e670a13c7/global/networks/mynetwork",
                "network_ip": "10.180.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-cf3e670a13c7/regions/us-west3/subnetworks/mynetwork",
                "subnetwork_project": "qwiklabs-gcp-00-cf3e670a13c7"
              }
            ],
            "project": "qwiklabs-gcp-00-cf3e670a13c7",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-cf3e670a13c7/zones/us-west3-b/instances/mynet-us-vm",
            "service_account": [
              {
                "email": "946216768401-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/logging.write",
                  "https://www.googleapis.com/auth/monitoring.write",
                  "https://www.googleapis.com/auth/service.management.readonly",
                  "https://www.googleapis.com/auth/servicecontrol",
                  "https://www.googleapis.com/auth/trace.append"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-west3-b"
          },
          "dependencies": [
            "data.google_compute_default_service_account.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "managementnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "description": "managementnet description",
            "enable_ula_internal_ipv6": false,
            "id": "projects/qwiklabs-gcp-00-cf3e670a13c7/global/networks/managementnet",
            "mtu": 0,
            "name": "managementnet",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "qwiklabs-gcp-00-cf3e670a13c7",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-cf3e670a13c7/global/networks/managementnet"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "privatenet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "description": "privatenet description",
            "enable_ula_internal_ipv6": false,
            "id": "projects/qwiklabs-gcp-00-cf3e670a13c7/global/networks/privatenet",
            "mtu": 0,
            "name": "privatenet",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "qwiklabs-gcp-00-cf3e670a13c7",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-cf3e670a13c7/global/networks/privatenet"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc-network-default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "description": "mynetwork (Default)",
            "enable_ula_internal_ipv6": false,
            "id": "projects/qwiklabs-gcp-00-cf3e670a13c7/global/networks/mynetwork",
            "mtu": 0,
            "name": "mynetwork",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "qwiklabs-gcp-00-cf3e670a13c7",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-cf3e670a13c7/global/networks/mynetwork"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "managementsubnet-us",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-04-19T04:40:58.894-07:00",
            "gateway_address": "10.240.0.1",
            "id": "projects/qwiklabs-gcp-00-cf3e670a13c7/regions/us-west3/subnetworks/managementsubnet-us",
            "ip_cidr_range": "10.240.0.0/20",
            "name": "managementsubnet-us",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-cf3e670a13c7/global/networks/managementnet",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "qwiklabs-gcp-00-cf3e670a13c7",
            "purpose": "PRIVATE",
            "region": "us-west3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-cf3e670a13c7/regions/us-west3/subnetworks/managementsubnet-us",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.managementnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "privatesubnet-eu",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-04-19T04:40:48.199-07:00",
            "gateway_address": "172.20.0.1",
            "id": "projects/qwiklabs-gcp-00-cf3e670a13c7/regions/europe-west1/subnetworks/privatesubnet-eu",
            "ip_cidr_range": "172.20.0.0/20",
            "name": "privatesubnet-eu",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-cf3e670a13c7/global/networks/privatenet",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "qwiklabs-gcp-00-cf3e670a13c7",
            "purpose": "PRIVATE",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-cf3e670a13c7/regions/europe-west1/subnetworks/privatesubnet-eu",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.privatenet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "privatesubnet-us",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-04-19T04:40:48.027-07:00",
            "gateway_address": "172.16.0.1",
            "id": "projects/qwiklabs-gcp-00-cf3e670a13c7/regions/us-west3/subnetworks/privatesubnet-us",
            "ip_cidr_range": "172.16.0.0/24",
            "name": "privatesubnet-us",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-cf3e670a13c7/global/networks/privatenet",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "qwiklabs-gcp-00-cf3e670a13c7",
            "purpose": "PRIVATE",
            "region": "us-west3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-cf3e670a13c7/regions/us-west3/subnetworks/privatesubnet-us",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.privatenet"
          ]
        }
      ]
    }
  ]
}